--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
               Menggunakan metode Fuzzy Logic <br/>
           </h4>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a href="javacript:void(0)" class="btn btn-primary btn-lg px-4 gap-3">Proses Prediksi</a>
+            <a href="{{ BASE_URL }}/prediksi" class="btn btn-primary btn-lg px-4 gap-3">Proses Prediksi</a>
           </div>
         </div>
       </div>
