update new func

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         <footer style="margin-top: 30px;">
           <div style="text-align: center;">
             <p>Sistem Prediksi Banjir - Oleh : Aditia Darma Nasution<br/>
-                Haxorsprogrammingclub<br/>
+                <b>Haxorsprogrammingclub</b><br/>
                  Universitas Islam Negeri Sumatera Utara - Medan</p>
           </div>
         </footer>
